height issue on mobile resolved

--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@
 .left__column {
     display: grid;
     top: 0;
-    max-height: 100vh;
+    min-height: 100vh;
     left: -3000px;
     position: relative;
     grid-template-rows: 8fr 2fr 1fr;
@@ -160,7 +160,7 @@ display:table-cell;
 
 .right__column {
     left: -3000px;
-    max-height: 100vh;
+    min-height: 100vh;
     position: relative;
     animation: wlot 0.7s ease-out forwards;
     animation-delay: 0.4s;
